Child icon variables' data stored in RenderPiece instead of its own list. Fixed bossbars's players